--- a/flightsensor/.vscode/settings.json
+++ b/flightsensor/.vscode/settings.json
@@ -2,17 +2,27 @@
   "C_Cpp.clang_format_style": "Visual Studio",
   "editor.formatOnSave": false,
   "[cpp]": {
-    "editor.quickSuggestions": true
+    "editor.quickSuggestions": {
+      "comments": "on",
+      "strings": "on",
+      "other": "on"
+    }
   },
   "[c]": {
-    "editor.quickSuggestions": true
+    "editor.quickSuggestions": {
+      "comments": "on",
+      "strings": "on",
+      "other": "on"
+    }
   },
   "C_Cpp.intelliSenseEngineFallback": "Enabled",
   "files.associations": {
     "freertos.h": "c",
     "device.h": "c",
     "i2c_bus.h": "c",
-    "i2c.h": "c"
+    "i2c.h": "c",
+    "gpio.h": "c"
   },
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "idf.adapterTargetName": "esp32"
 }
